--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
     "redux": "^5.0.1",
-    "swiper": "^11.2.3"
+    "swiper": "^11.2.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
