--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@stripe/react-stripe-js": "^3.5.1",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
